unpackaged/main/default/objects/ffps_ihs__FFPS_Batch_Setting__mdt/ffps_ihs__FFPS_Batch_Setting__mdt.object-meta.xml
<CustomObject>
    <label>FFPS Batch Setting</label>
    <pluralLabel>FFPS Batch Settings</pluralLabel>
</CustomObject>