unpackaged/main/default/objects/ffps_ihs__FFPS_Batch_Setting__mdt/fields/ffps_ihs__Batch_Interval__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__Batch_Interval__c</fullName>
    <defaultValue>0</defaultValue>
    <description>If set, the batch job will be scheduled to run repeatedly with the supplied frequency (in minutes). The job only needs to be submitted once and takes care of rescheduling itself.</description>
    <inlineHelpText>If set, the batch job will be scheduled to run repeatedly with the supplied frequency (in minutes). The job only needs to be submitted once and takes care of rescheduling itself.</inlineHelpText>
    <label>Batch Interval</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>