unpackaged/main/default/objects/ffps_ihs__FFPS_Batch_Setting__mdt/fields/ffps_ihs__Batch_Scope_Size__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__Batch_Scope_Size__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Determines the batch scope size - default value is 1.</description>
    <label>Batch Scope Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>