unpackaged/main/default/objects/ffps_ihs__FFPS_Batch_Setting__mdt/fields/ffps_ihs__Email_Recipients__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__Email_Recipients__c</fullName>
    <description>Comma separated list of email address(es) recipients of batch status reports. If blank, the default user email address will be used.</description>
    <inlineHelpText>Comma separated list of email address(es) recipients of batch status reports. If blank, the default user email address will be used.</inlineHelpText>
    <label>Email Recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>