unpackaged/main/default/objects/ffps_ihs__FFPS_Batch_Setting__mdt/fields/ffps_ihs__Send_Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__Send_Email_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send Email Notification when Batch Job finishes.</description>
    <inlineHelpText>Send Email Notification when Batch Job finishes.</inlineHelpText>
    <label>Send Email Notification</label>
    <type>Checkbox</type>
</CustomField>